--- a/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
@@ -429,7 +429,7 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="permission_action_reject">Zakázať</string>
     <string name="permission_detail">Povolenia</string>
     <string name="permission_group_title_charges_related">Telefón</string>
-    <string name="permission_group_title_media_related">Multimédia</string>
+    <string name="permission_group_title_media_related">Multimédiá</string>
     <string name="permission_group_title_others">Ostatné</string>
     <string name="permission_group_title_privacy_related">Súkromie</string>
     <string name="permission_group_title_settings_related">Nastavenia</string>
