--- a/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
@@ -6,7 +6,7 @@
     <string name="DOWNLOAD_UNIT_MB">MB</string>
     <string name="DOWNLOAD_UNIT_TB">TB</string>
     <string name="Only_the_wifi">Efektívne len cez Wi-Fi</string>
-    <string name="about">O aplikácií</string>
+    <string name="about">O aplikácii</string>
     <string name="action_settings">Nastavenia</string>
     <string name="add_flow_fail_haveget_msg">Sorry,You have Get Free High Speed Flow This Month</string>
     <string name="add_flow_fail_vip_msg">Dear Thunder vip, High Speed Channel Opened</string>
