--- a/Slovak/main/MiGalleryLockscreen.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiGalleryLockscreen.apk/res/values-sk/strings.xml
@@ -669,7 +669,7 @@ Pošlite tento kód nadriadenému."</string>
     <string name="service_error">Chyba servera</string>
     <string name="set_success">Úspešne zmenené</string>
     <string name="setting_about_item_des">Verzia</string>
-    <string name="setting_about_item_title">O aplikácií</string>
+    <string name="setting_about_item_title">O aplikácii</string>
     <string name="setting_des">Môžete nastaviť vlastné pozadia v Nastavenia - Zámok displeja - Denná tapeta</string>
     <string name="setting_head">Nastavenia</string>
     <string name="setting_ok">Nastavenia</string>
