--- a/Slovak/main/Calculator.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Calculator.apk/res/values-sk/strings.xml
@@ -197,7 +197,7 @@
     <string name="item_title_vel_conversion">Rýchlosť</string>
     <string name="item_title_volume_conversion">Objem</string>
     <string name="item_title_weight_conversion">Hmotnosť</string>
-    <string name="label_about">O aplikácií</string>
+    <string name="label_about">O aplikácii</string>
     <string name="label_clear_history">Vymazať všetko</string>
     <string name="label_date_difference">Rozdiel</string>
     <string name="label_days">Dni</string>
@@ -214,7 +214,7 @@
     <string name="label_share">Zdieľať</string>
     <string name="label_start_date">Začiatok</string>
     <string name="label_statistics">Štatistiky</string>
-    <string name="label_to_date">Komu</string>
+    <string name="label_to_date">Do</string>
     <string name="label_total_interest">Celkovo úrok</string>
     <string name="label_total_investment">Celková investícia</string>
     <string name="label_total_payment">Celkovo zaplatiť</string>
@@ -533,7 +533,7 @@ Ročné a päťročné ZÚS budú stanovené vždy v 20. deň v mesiaci (môžu 
     <string name="unit_data_display_area_sq.mi">Štvorcová míľa</string>
     <string name="unit_data_display_area_sq.mm">Štvorcový milimeter</string>
     <string name="unit_data_display_area_sq.rd">Štvorcový rod</string>
-    <string name="unit_data_display_area_sq.um">Štvorcový mikron</string>
+    <string name="unit_data_display_area_sq.um">Štvorcový mikrometer</string>
     <string name="unit_data_display_area_sq.yd">Štvorcový yard</string>
     <string name="unit_data_display_currency_aed">Spojené arabské emiráty dirham</string>
     <string name="unit_data_display_currency_ars">Argentínske peso</string>
@@ -664,7 +664,7 @@ Ročné a päťročné ZÚS budú stanovené vždy v 20. deň v mesiaci (môžu 
     <string name="unit_data_display_volume_cu.in">Kubický palec</string>
     <string name="unit_data_display_volume_cu.m">Kubický meter</string>
     <string name="unit_data_display_volume_cu.mm">Kubický milimeter</string>
-    <string name="unit_data_display_volume_cu.um">Kubický mikron</string>
+    <string name="unit_data_display_volume_cu.um">Kubický mikrometer</string>
     <string name="unit_data_display_volume_cu.yd">Kubický yard</string>
     <string name="unit_data_display_volume_dl">Deciliter</string>
     <string name="unit_data_display_volume_hl">Hektoliter</string>
